--- a/Tutorials-JS/dark mode/dark mode.html
+++ b/Tutorials-JS/dark mode/dark mode.html
@@ -11,6 +11,7 @@
   <div class="dark-mode"></div>
   <div class="box-dark">
     <label class="switch">
+      <span>.</span>
       <input type="checkbox">
       <span class="slider round"></span>
     </div>
